--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start:emulator": "node ./scripts/index.js"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.13.2",
     "@reduxjs/toolkit": "^1.4.0",
     "expo": "~39.0.2",
     "expo-status-bar": "~1.0.2",
@@ -16,7 +17,8 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-web": "~0.13.12",
-    "react-redux": "^7.2.2"
+    "react-redux": "^7.2.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
