--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+    "react-native-floating-action": "^1.21.0",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-paper": "^4.5.0",
+    "react-native-popup-dialog": "^0.18.3",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
+    "react-native-swiper": "^1.6.0",
     "react-native-text-input-mask": "^2.0.0",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.2",
