--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-navigation/stack": "^5.12.8",
     "@reduxjs/toolkit": "^1.4.0",
     "expo": "^40.0.0",
+    "expo-local-authentication": "~9.5.0",
+    "expo-notifications": "~0.8.2",
     "expo-status-bar": "~1.0.3",
     "lodash": "^4.17.20",
     "react": "16.13.1",
@@ -28,6 +30,7 @@
     "react-native-popup-dialog": "^0.18.3",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
+    "react-native-scalable-image": "^1.0.0",
     "react-native-screens": "~2.15.0",
     "react-native-svg": "12.1.0",
     "react-native-swipeable": "^0.6.0",
