--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-app-intro-slider": "^4.0.4",
     "react-native-chart-kit": "^6.9.0",
     "react-native-elements": "^3.0.1",
     "react-native-floating-action": "^1.21.0",
