--- a/app.json
+++ b/app.json
@@ -4,11 +4,11 @@
     "slug": "money-tracker",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/icon-1.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/splash-1.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#FFF9F0"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -21,12 +21,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/icon-1.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.leerun1409.moneytracker"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/icon-1.png"
     }
   }
 }
